Fix editor horizontal overflow from scrolblar

--- a/css/editor.styl
+++ b/css/editor.styl
@@ -1,12 +1,13 @@
 /** Rail Announcements Generator. By Roy Curtis, MIT license, 2018 */
 
 #editor
-  background $bgDarker
-  flex-grow  1
-  font-size  3rem
-  padding    1rem
-  overflow-x hidden
-  overflow-y auto
+  background    $bgDarker
+  flex-grow     1
+  font-size     3rem
+  padding       1rem
+  padding-right 3rem
+  overflow-x    hidden
+  overflow-y    auto
 
   // All selectable elements
   span[data-type=coach],       span[data-type=excuse],  span[data-type=integer],
